# credit_pipeline

./: .gitignore  .gitmodules  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  commands_docker.txt  fontlist-v330.json  py_env.txt  pyproject.toml  requirements_dev.txt  requirements_experiments.txt  requirements_kdd.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
credit_pipeline/: RI.py  __init__.py  cli.py  data.py  data_exploration.py  evaluate.py  explainability.py  fairness_models.py  models.py  reject_inference.py  ri_algorithms.py  ri_models.py  training.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: 0_training_model.ipynb  1_fairness_methods.ipynb  2_reject_inference.ipynb  3_explainability.ipynb  EDA_Steps_clean.ipynb  LC_ri.py  Model_Pipeline_Functions_Pessoal_V20_Github_Integration.ipynb  Model_Pipeline_Functions_Pessoal_V21_K_fold.ipynb  Model_Pipeline_Functions_Pessoal_V22_LendigClub.ipynb  Model_Pipeline_Functions_Pessoal_V23_Following Shih.ipynb  Model_Pipeline_Functions_Pessoal_V24_Data_LC.ipynb  Model_Pipeline_Functions_Pessoal_V24_Results_LC.ipynb  Model_Pipeline_Functions_Pessoal_V25_script.ipynb  Model_Pipeline_Functions_Pessoal_V26_HomeCredit.ipynb  analysis_results.ipynb  colab_dev_example.ipynb  explainability.ipynb  exploratory_data_analysis.ipynb  fairness_methods.ipynb  german.ipynb  home_credit.ipynb  model_loading.ipynb  playground ICMD.ipynb  playground Revista Pt1 (ICMD).ipynb  playground Revista Pt2 - LC.ipynb  playground kdd.ipynb  (+12 more)
(+1237 files in other folders)
